// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render 1 1 1`] = `
<DocumentFragment>
  <div
    class="ui stackable two column grid grid__container"
  >
    <div
      class="four wide column grid__sidebar"
    >
      <div
        class="grid__header"
      >
        <h1
          class="ui top attached header"
        >
          Cohorts
        </h1>
        <div
          class="ui large attached segment"
        >
          Cohorts are specific groups of participants (or your class) assigned to a scenario or set of scenarios.
        </div>
      </div>
      <button
        class="ui big fluid icon primary left labeled button sc__hidden-on-mobile"
        name="Create a cohort"
      >
        <i
          aria-hidden="true"
          class="add icon"
        />
        Create a Cohort
      </button>
    </div>
    <div
      class="twelve wide column grid__main"
    >
      <div
        class="right menu grid__menu"
      >
        <div
          class="ui big icon labeled input grid__menu-search"
        >
          <div
            class="ui label label"
          >
            Search cohorts
          </div>
          <input
            type="text"
            value=""
          />
          <i
            aria-hidden="true"
            class="search icon"
          />
        </div>
      </div>
      <div
        class="ui grid"
      >
        <div
          class="row"
        >
          <div
            class="stretched column"
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="ui doubling four cards"
              role="status"
            >
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="stretched column"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 1 2 1`] = `
<DocumentFragment>
  <div
    class="ui stackable two column grid grid__container"
  >
    <div
      class="four wide column grid__sidebar"
    >
      <div
        class="grid__header"
      >
        <h1
          class="ui top attached header"
        >
          Cohorts
        </h1>
        <div
          class="ui large attached segment"
        >
          Cohorts are specific groups of participants (or your class) assigned to a scenario or set of scenarios.
        </div>
      </div>
      <button
        class="ui big fluid icon primary left labeled button sc__hidden-on-mobile"
        name="Create a cohort"
      >
        <i
          aria-hidden="true"
          class="add icon"
        />
        Create a Cohort
      </button>
    </div>
    <div
      class="twelve wide column grid__main"
    >
      <div
        class="ui grid"
      >
        <div
          class="row"
        >
          <div
            class="stretched column"
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="ui doubling four cards"
              role="status"
            >
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                class="ui card loading__multi-card"
                style="height: 20rem;"
              >
                <div
                  class="content loading__content"
                >
                  <div
                    class="ui placeholder fluid"
                  >
                    <div
                      class="square image"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="stretched column"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
